Fix iphone notch spacing

--- a/themes/V4/assets/scss/04-objects/_objects.pages.scss
+++ b/themes/V4/assets/scss/04-objects/_objects.pages.scss
@@ -5,7 +5,9 @@
     z-index: 1;
     min-height: 100vh;
     padding-top: var(--space-md);
+    padding-top: env(safe-area-inset-top);
     background-color: var(--color-bg);
+    padding: var(--space-md) env(safe-area-inset-right) env(safe-area-inset-bottom);
 
     @include respond-above(lg) {
         padding-top: var(--space-xl);
